packages/isar_plus_generator/test/errors/id/duplicate.dart
// two or more properties with type "Id" defined

import 'package:isar_plus/isar.dart';

@collection
class Test {
  Id? id1;

  Id? id2;
}
